240823 메인 건드려보는중2 서치 건드려보는중 검색 건드려보는중2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
         <header class="app-header home">
             <a href="" onclick="setPlatformGtag('홈', 'main', '홈 버튼');" class="app-logo main">방구석연구소</a>
             <div class="feature">
-                <a href="/search.php" onclick="setPlatformGtag('검색', 'main', '검색 버튼');" class="app-header-search-btn" aria-label="search-btn">
+                <a href="/search" onclick="setPlatformGtag('검색', 'main', '검색 버튼');" class="app-header-search-btn" aria-label="search-btn">
                     <div id="search"></div>
                 </a>
                 <div id="ham">
@@ -137,28 +137,28 @@
         </div>
             <ul class="all-category">
                 <li>
-                    <a class="category-item" href="/search.php?q=MBTI · 유형" onclick="setPlatformGtag('유형테스트', 'main', '전체 카테고리 버튼');">
+                    <a class="category-item" href="/searchResults?q=MBTI · 유형" onclick="setPlatformGtag('유형테스트', 'main', '전체 카테고리 버튼');">
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-type-renewal.png" class="category-icon" alt="favicon">
                         </div>
                         MBTI · 유형      </a>
                 </li>
                 <li>
-                    <a class="category-item" href="/search.php?q=케미 · 궁합" onclick="setPlatformGtag('케미궁합', 'main', '전체 카테고리 버튼');">
+                    <a class="category-item" href="/searchResults?q=케미 · 궁합" onclick="setPlatformGtag('케미궁합', 'main', '전체 카테고리 버튼');">
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-couple-renewal.png" class="category-icon" alt="favicon">
                         </div>
                         케미 · 궁합      </a>
                 </li>
                 <li>
-                    <a class="category-item" href="/search.php?q=연애" onclick="setPlatformGtag('연애', 'main', '전체 카테고리 버튼');">
+                    <a class="category-item" href="/searchResults?q=연애" onclick="setPlatformGtag('연애', 'main', '전체 카테고리 버튼');">
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-heart-renewal.png" class="category-icon" alt="favicon">
                         </div>
                         연애      </a>
                 </li>
                 <li>
-                    <a class="category-item" href="/search.php?q=퀴즈 · 능력고사" onclick="setPlatformGtag('퀴즈·능력고사', 'main', '전체 카테고리 버튼');">
+                    <a class="category-item" href="/searchResults?q=퀴즈 · 능력고사" onclick="setPlatformGtag('퀴즈·능력고사', 'main', '전체 카테고리 버튼');">
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-quiz-renewal.png" class="category-icon" alt="favicon">
                         </div>
@@ -166,7 +166,7 @@
                 </li>
 
                 <li>
-                    <a class="category-item" href="/search.php?q=미니게임" onclick="setPlatformGtag('미니게임', 'main', '전체 카테고리 버튼');">
+                    <a class="category-item" href="/searchResults?q=미니게임" onclick="setPlatformGtag('미니게임', 'main', '전체 카테고리 버튼');">
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-minigame-renewal.png" class="category-icon" alt="favicon">
                         </div>
