240826 createGame 기능 구현 까지 완료

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,15 +10,15 @@
         <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96">
         <link rel="image_src" href="https://cdn.banggooso.com/assets/images/common/ogimg.jpg">
-        <link href="/css/styles.css" rel="stylesheet">
+        <link href="/css/base/styles.css" rel="stylesheet">
 
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-        <link rel="stylesheet" href="/css/common.css">
-        <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet" href="/css/main/common.css">
+        <link rel="stylesheet" href="/css/main/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/static/css/popup.css">
+        <link rel="stylesheet" href="/css/main/popup.css">
         <script src="/assets/popups/js/popup.js?ver=2024032903"></script>
         <script src="/assets/js/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.4.0/dist/lazyload.min.js"></script>
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li class="my-notice">
-                    <a href="/my/myroom_notice.html" onclick="setPlatformGtag('공지사항', 'sidetab', '공지사항 버튼');">
+                    <a href="/notice/list" onclick="setPlatformGtag('공지사항', 'sidetab', '공지사항 버튼');">
                         <h5 class="my-icon">공지사항</h5>
                     </a>
                 </li>
@@ -70,8 +70,8 @@
                 </li>
             </ul>
             <div class="profile-bottom">
-                <a class="my-send" href="send-ask-page.html" onclick="setPlatformGtag('의견 보내기', 'sidetab', '의견 보내기 버튼');">
-                    <span class="my-icon">의견 보내기</span>
+                <a class="my-send" href="/createGame/create" onclick="setPlatformGtag('의견 보내기', 'sidetab', '의견 보내기 버튼');">
+                    <span class="my-icon">게임 만들기</span>
                 </a>
 
                 <a class="my-brand" href="brand-page.html" onclick="setPlatformGtag('제휴 문의', 'sidetab', '제휴 문의 버튼');">
