--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{layout/base.html}">
 <head>
-      <link rel="stylesheet" href="/css/notice.css">
+      <link rel="stylesheet" href="/css/main/notice.css">
 </head>
 <body>
 <div layout:fragment="content">
