--- a/src/main/resources/static/css/create/create2.css
+++ b/src/main/resources/static/css/create/create2.css
@@ -125,4 +125,9 @@ input[type="text"]:focus, textarea:focus {
     #cancel:hover {
         background-color: #ffbaba;
     }
+
+    #cancel {
+        padding: 8px 12px;
+        font-size: 0.95rem;
+    }
 }
