--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <title>재미보따리 공지사항</title>
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/base/styles.css" rel="stylesheet">
 
   </head>
   <body>
@@ -18,7 +18,7 @@
           <span></span>
         </label>
         <div class="sidebar"></div>
-        <a class="logo">
+        <a href="/main" class="logo">
           <img src="/img/mainlogo2.png" alt="Main Logo" width="40px" height="40px">
         </a>
         <a class="mypage">
