모든 결과 확인화면

--- a/src/main/resources/templates/all_result.html
+++ b/src/main/resources/templates/all_result.html
@@ -21,7 +21,7 @@
 
 <!--타이틀-->
 <div class="title-container">
-    <h1>모든 유형 보기</h1>
+    <h1>모든 유형 확인하기</h1>
     <p>여기에서 다양한 유형의 결과를 확인하세요!</p>
 </div>
 
