--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -74,7 +74,7 @@
               .then(data => {
                 if (data.message === "로그인 성공") {
                   alert('로그인 성공');
-                  window.location.href = '/home'; // 로그인 성공 후 이동할 페이지
+                  window.location.href = '/main'; // 로그인 성공 후 이동할 페이지
                 } else {
                   alert('로그인 실패: 아이디 또는 비밀번호가 잘못되었습니다.');
                 }
