--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,12 +7,6 @@
     <meta name="description" content="회원가입">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/mypage.css">
-
-    <!-- CSRF 토큰 메타 태그 추가 -->
-<!--    <meta name="csrf-token" th:content="${_csrf.token}">-->
-
-    <!-- 자바스크립트 나중에 -->
-    <!-- <script src="/assets/js/jquery-3.6.0.min.js"></script> -->
 </head>
 
 <body class="ko-KR">
@@ -23,98 +17,44 @@
     </header>
 
     <main class="app-main" id="step1">
-        <div class="form-group">
-            <label class="form-label">아이디</label>
-            <div class="controls">
-                <input class="form-input" id="email" placeholder="아이디를 입력하세요." autofocus>
+        <form action="/users/new" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label class="form-label">아이디</label>
+                <div class="controls">
+                    <input class="form-input" id="email" name="memberId" placeholder="아이디를 입력하세요." autofocus>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="form-label">비밀번호</label>
-            <div class="controls">
-                <input type="password" id="password" class="form-input" placeholder="비밀번호를 입력하세요.">
+            <div class="form-group">
+                <label class="form-label">비밀번호</label>
+                <div class="controls">
+                    <input type="password" id="password" name="memberPw" class="form-input" placeholder="비밀번호를 입력하세요.">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="form-label">비밀번호 확인</label>
-            <div class="controls">
-                <input type="password" id="password2" class="form-input" placeholder="비밀번호를 확인해주세요.">
+            <div class="form-group">
+                <label class="form-label">비밀번호 확인</label>
+                <div class="controls">
+                    <input type="password" id="password2" name="password2" class="form-input" placeholder="비밀번호를 확인해주세요.">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="form-label">닉네임 입력</label>
-            <div class="controls">
-                <input id="nickname" class="form-input" placeholder="닉네임을 입력해주세요.">
+            <div class="form-group">
+                <label class="form-label">닉네임 입력</label>
+                <div class="controls">
+                    <input id="nickname" name="memberName" class="form-input" placeholder="닉네임을 입력해주세요.">
+                </div>
             </div>
-        </div>
-        <div class="next_btn">
-            <button class="btn yellow" id="signupButton">가입완료</button>
-        </div>
+            <div class="form-group">
+                <label for="profileImage">프로필 이미지:</label>
+                <input type="file" id="profileImage" name="profileImage"/>
+            </div>
+            <div class="next_btn">
+                <button class="btn yellow" type="submit">가입완료</button>
+            </div>
+        </form>
     </main>
-
     <!-- footer -->
     <footer>
-        <!-- <p>사업자등록번호 897-87-01933</p> -->
     </footer>
 </div>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        document.getElementById('signupButton').addEventListener('click', function(event) {
-            event.preventDefault(); // 기본 폼 제출 동작 방지
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const password2 = document.getElementById('password2').value;
-            const nickname = document.getElementById('nickname').value;
-
-            if (password !== password2) {
-                alert("비밀번호가 일치하지 않습니다.");
-                return;
-            }
-
-            // CSRF 토큰을 메타 태그에서 추출
-            // const csrfToken = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
-
-            fetch('/api/members/register', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    // 'X-CSRF-TOKEN': csrfToken // CSRF 토큰을 헤더에 추가
-                },
-                body: JSON.stringify({
-                    memberId: email,
-                    memberPw: password,
-                    memberName: nickname
-                })
-            })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok.');
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    if (data) {
-                        alert('회원가입 성공');
-                        window.location.href = '/api/members/login'; // 회원가입 후 로그인 페이지로 이동
-                    } else {
-                        alert('회원가입 실패');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('회원가입 중 오류가 발생했습니다.');
-                });
-        });
-    });
-</script>
-
-
-<!-- 자바스크립트 나중에 -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
-<!-- <script src="https://cdn.banggooso.com/assets/js/clipboard.min.js"></script> -->
-<!-- <script src="/assets/js/common-re.js?ver=2024032903"></script> -->
 </body>
 </html>
